--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Scrum Goal manager project for dCC",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "karma start karma.conf.js",
     "start": "node server.js"
   },
   "repository": {
@@ -23,5 +23,11 @@
   "dependencies": {
     "express": "^4.14.0",
     "pg": "^6.0.2"
+  },
+  "devDependencies": {
+    "jasmine-core": "^2.4.1",
+    "karma": "^1.1.1",
+    "karma-chrome-launcher": "^1.0.1",
+    "karma-jasmine": "^1.0.2"
   }
 }
